# pedestrian_simulator

./: CMakeLists.txt  CMakeLists1.txt  README.md  package.xml  package1.xml  package2.xml  setup.py
.github/workflows/: main.yml
config/: configuration.yaml  ros2_configuration.yaml
include/: ros1_pedestrian_simulator.h
include/pedestrian_simulator/: autoware_interface.h  configuration.h  pedestrian.h  pedestrian_simulator.h  pedsim_manager.h  ros1_pedestrian_simulator.h  ros2_pedestrian_simulator.h  spawn_randomizer.h  types.h  xml_reader.h
include/pedestrians/: binomial_pedestrian.h  gaussian_pedestrian.h  pedestrian.h  random_gaussian_pedestrian.h  social_forces_pedestrian.h  waypoint_pedestrian.h
launch/: ros1_simulation.launch  ros2_simulation.launch  simulation.launch  simulation.launch.py
rviz/: simulation.rviz
scenarios/: 4_binomial.xml  4_corridor.xml  4_crossing(copy).xml  4_crossing.xml  one_ped.xml  prius.xml  prius_dynamic.xml  prius_garage.xml  region_test.xml  static_1.xml  static_2.xml  static_3.xml  static_4.xml
scenarios/autoware/: crossing.xml  demo_0.xml  demo_1.xml  demo_3.xml  demo_multi_1.xml  demo_multi_2.xml  demo_multi_3.xml  demo_multi_4.xml  demo_multi_5.xml  demo_with_static.xml  diagonal_crossing.xml  guidance_debug.xml  headon.xml  me_4crossing.xml  me_crossing.xml  me_many.xml  me_many2.xml  me_overtake.xml  me_straight.xml  overtake.xml  random.xml  random_area.xml  random_area_busy.xml  rss-paper-1.xml  rss-paper.xml  several_crossing.xml  static.xml  static_crossing.xml  temp.xml  test.xml  top_map.xml  winding.xml
scenarios/carla/: 2_peds.xml  6_peds.xml  demo_09-2022.xml
scenarios/corridor/: 16_random.xml  1_middle.xml  4_both_ways.xml  6_both_ways.xml
scenarios/crossing/: 16_random-sidewalks.xml  1_left.xml  2_opposite_crossing.xml  3_lrl.xml
scenarios/cyberzoo/: 1_headon.xml  5_diagonal.xml  5_random.xml  8_random.xml
scenarios/demo/: 16_corridor.xml  32_corridor.xml  8_corridor.xml
scenarios/dingo/: 12_corridor.xml
scenarios/headon/: 0.xml  1_angled.xml  1_middle.xml  2_middle.xml
scenarios/llm/: 8_headon.xml  8_overtake.xml
scenarios/new_safe_horizon/: 1_static.xml  4_gaussian.xml
scenarios/open_space/: 0.xml  24.xml
scenarios/prius/: 1_binomial.xml  1_headon.xml  1_overtake.xml  2_crossing.xml  4_binomial.xml  prius.xml
scenarios/prius/crossing/: 8.xml
scenarios/prius/headon/: 1_headon.xml
scenarios/prius/random/: 16_straight.xml  2_straight.xml  8_straight.xml
scenarios/random/: 12_straight.xml  16_straight.xml  4_straight.xml  6_straight.xml  8_straight.xml
scenarios/random_fast/: 12_straight.xml  16_straight.xml  2_headon.xml  2_straight.xml  4_straight.xml  6_straight.xml  8_straight.xml
scenarios/random_social/: 0_corridor.xml  12_corridor.xml  12_straight.xml  12_uncertain.xml  16_corridor.xml  16_straight.xml  4_corridor.xml  4_straight.xml  8_corridor.xml  8_straight.xml
scenarios/safe-horizon/: 1_headon.xml  4_binomial.xml  4_crossing(copy).xml  4_crossing_v2.xml  6_crossing.xml  6_peds.xml  crowded_binomial.xml  crowded_gaussian.xml  gaussian_crossing.xml
scenarios/static/: 0_middle.xml  1_dynamic.xml  1_middle.xml  1_middle_static.xml  1_offset_large.xml  1_offset_small.xml  2_blocking.xml  2_middle.xml  2_sequential.xml  2_sequential_tight.xml  2_static.xml  3_sequential_tight.xml  4_static.xml  8_corridor.xml
scripts/: scenario_record_node.py  spawn_walls.py
scripts/pedestrian_simulator/: scenario_record_node.py
src/: configuration.cpp  pedestrian_simulator.cpp  pedestrian_simulator_node.cpp  pedsim_manager.cpp  ros1_collision_checker_node.cpp  ros1_pedestrian_simulator.cpp  ros2_collision_checker_node.cpp  ros2_pedestrian_simulator.cpp  spawn_randomizer.cpp  xml_reader.cpp
src/pedestrians/: binomial_pedestrian.cpp  gaussian_pedestrian.cpp  pedestrian.cpp  random_gaussian_pedestrian.cpp  social_forces_pedestrian.cpp  waypoint_pedestrian.cpp
srv/: SpawnWall.srv
