<?xml version="1.0"?>
<package format="3">
  <name>pedestrian_simulator</name>
  <version>0.0.0</version>
  <description>The pedestrian_simulator package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="r2c1@todo.todo">r2c1</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>nav_msgs</depend>
  <depend>derived_object_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>asr_rapidxml</depend>
  <depend>ros_tools</depend>
  <depend>pedsim_original</depend>
  <depend>mpc_planner_msgs</depend>
  <depend>message_filters</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
